# huaxingsasss

./: .gitattributes  .gitignore  .mcp.json  2026-06-07-update-branch-comprehensive-review.md  AGENT_AUDIT.md  AGENT_REFACTOR_PLAN.md  ARCHITECTURE_REFACTOR.md  CLAUDE.md  DEPLOY_PLAN.md  PRODUCT.md  REFACTOR-receipt-to-card.md  SPEC.md  customer-card-redesign.html  customer-redesign.html  m3_test.py  overview.md  public.sql  test_dashscope_speed.py  test_vision_speed.py  王燕宾 深圳湾新办.docx
.github/workflows/: deploy.yml
.mimocode/plans/: 1781228623494-calm-comet.md  1781232654199-brave-meadow.md  1781235146498-brave-rocket.md  1781268265207-proud-squid.md  1781274084645-nimble-knight.md  1781315757243-hidden-panda.md  1781437240699-nimble-forest.md  1781579452575-silent-planet.md
.workbuddy/: overview.md
.workbuddy/artifacts/: ui-redesign-overview.md
.workbuddy/memory/: 2026-06-01.md  2026-06-02.md  2026-06-03.md  2026-06-04.md  2026-06-05.md  MEMORY.md
backend/: .env.example  Dockerfile  ISSUES.md  README.md  docker-compose.yml  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/ai/: agent.py  chat_session_service.py  llm_client.py  prompts.py  prompts_v2.py  tool_executor.py  tool_executor_base.py  tools.py  tools_v2.py
backend/app/ai/orchestrator/: __init__.py  checkpointer.py  contract_entry.py  general_chat.py  graph.py  receipt_entry.py  sse_adapter.py  state.py  state_v2.py  unified_agent.py
backend/app/api/: dependencies.py
backend/app/api/v1/: agent.py  auth.py  contract_additional_items.py  contracts.py  customers.py  exchange_rates.py  files.py  payment_accounts.py  payments.py  stats.py  users.py
backend/app/core/: business_types.py  chinese.py  exceptions.py  logging.py  middleware.py  payment_audit.py  permissions.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  agent_file.py  audit_log.py  base.py  chat_history.py  chat_session.py  contract.py  contract_additional_item.py  customer.py  exchange_rate.py  file.py  payment.py  payment_account.py  payment_override_audit.py  user.py
backend/app/schemas/: __init__.py  agent.py  contract.py  contract_additional_item.py  customer.py  exchange_rate.py  payment.py  payment_account.py  response.py  stats.py  user.py
backend/app/services/: audit_service.py  contract_additional_item_service.py  contract_analyzer.py  contract_service.py  customer_service.py  exchange_rate_fetcher.py  exchange_rate_service.py  file_analyzer.py  payment_account_service.py  payment_service.py  receipt_analyzer.py  receipt_matcher.py  stats_service.py  user_service.py
backend/app/tasks/: __init__.py  celery_app.py  cleanup_tasks.py  contract_tasks.py  exchange_rate_tasks.py  outstanding_backfill_tasks.py  receipt_ocr_tasks.py  receipt_verification_tasks.py
backend/app/utils/: file_analysis.py  file_utils.py  rate_limiter.py
backend/migrations/: README.md  alembic.ini  env.py
backend/migrations/versions/: 20260525_001_initial_schema.py  20260526_002_soft_delete.py  20260527_003_agent_chat_history.py  20260528_004_add_business_fields.py  20260530_005_income_expense_separation.py
backend/sql/: add_additional_receipt_files.sql  add_agent_file_table.sql  add_cash_payment_account.sql  add_chat_history_attachments.sql  add_payment_form_fields.sql  add_wechat_group_index.sql  chat_sessions.sql  contract_additional_items.sql  fix_paid_payment_failed_status.sql  payment_accounts.sql
backend/tests/: conftest.py  test_auth.py  test_contracts.py  test_payments.py
docs/: 2026-06-06-langgraph-agent-orchestration.md  2026-06-08-plan-driven-confirmation-v2.md  2026-06-12-no-receipt-expense-review.md  2026-06-13-agent-v1-v2-cleanup-plan.md  PRD-核心业务需求文档.md  audit-2026-06-06-update-branch.md  合同附加项功能升级方案.md  小星助手UI优化方案.md
docs/prototypes/: business-color-system.html  contract-card-bg-tint.html  customer-card-redesign.html  logo-animated.html  mascot-three-directions.html  money-typography-study.html  sidebar-redesign.html  star-orb-v2.html
frontend/: README.md  index.html  mock-contract-detail.html  mock-contract-ledger.html  package-lock.json  package.json  tsconfig.json
scripts/: deploy.sh  webhook_listener.py
(+85 files in other folders)
