[tool.poetry]
name = "contract-management-system"
version = "0.1.0"
description = "企业级合同管理与智能客服Agent系统"
authors = ["Qoder <qoder@huaxing.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"

# Web框架
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}

# 数据库
sqlalchemy = "^2.0.25"
asyncpg = "^0.29.0"
alembic = "^1.13.1"

# 认证与安全
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"

# 异步任务
celery = "^5.3.6"
redis = "^5.0.1"

# HTTP客户端
httpx = "^0.26.0"
requests = "^2.31.0"

# 数据处理
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
python-dateutil = "^2.8.2"

# 文件处理
python-magic = "^0.4.27"
Pillow = "^10.2.0"

# 日志与监控
structlog = "^24.1.0"

# 开发工具
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
black = "^24.1.1"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
