[project]
name = "contract-management-system"
version = "0.1.0"
description = "企业级合同管理与智能客服Agent系统"
requires-python = ">=3.12,<3.13"

dependencies = [
    # Web框架
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",

    # 数据库
    "sqlalchemy>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "psycopg2-binary>=2.9.10",

    # 认证与安全
    "python-jose[cryptography]>=3.4.0",
    "bcrypt>=4.2.0",
    "python-multipart>=0.0.17",

    # 异步任务
    "celery>=5.4.0",
    "redis>=5.2.0",

    # HTTP客户端
    "httpx>=0.28.0",
    "requests>=2.32.0",

    # 数据处理
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-dateutil>=2.9.0",
    "email-validator>=2.2.0",

    # 时区数据：zoneinfo 在 Windows 上没有系统时区库，必须靠 tzdata 包才能
    # 解析 Asia/Shanghai（Linux 自带 /usr/share/zoneinfo，无需此包）。
    # 现状是 celery/psycopg 间接拉了它，但不能依赖这种"运气"——某天它们
    # 去掉该依赖，Windows 本地开发就会 ZoneInfoNotFoundError。
    # 用平台 marker 保证只在 Windows 安装，Linux 生产环境零影响。
    "tzdata ; sys_platform == 'win32'",

    # 文件处理
    "python-magic>=0.4.27",
    "pillow>=11.0.0",
    "pillow-heif>=0.18.0",
    "PyMuPDF>=1.25.0",
    "python-docx>=1.1.2",
    "openpyxl>=3.1.5",

    # AI服务
    "dashscope>=1.25.0",
    "openai>=1.57.0",

    # LangGraph 编排（Phase 1 重构）
    # ADR #2: 不引入 langchain-openai，继续用现有 AgentModelClient（SiliconFlow DeepSeek）
    # ADR #5: 直接用 PostgresSaver，不分三阶段演进
    "langgraph>=1.2.0,<2.0.0",
    "langchain-core>=1.0.0",
    "langgraph-checkpoint-postgres>=2.0.0",
    "psycopg[binary,pool]>=3.1.0",

    # 日志与监控
    "structlog>=24.4.0",
    "langsmith>=0.1.0",  # LangSmith 可观测性（Phase 2.7）

    # 开发工具
    "black>=24.10.0",
    "flake8>=7.1.0",

    # 中文繁简转换
    "opencc-python-reimplemented>=0.1.7",
]
